application/manifests/deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: <CDSID>-deployment-config
  labels:
    app: <CDSID>-deployment-config
spec:
  replicas: 1
  selector:
    app: <CDSID>-deployment-config
  template:
    metadata:
      labels:
        app: <CDSID>-deployment-config
    spec:
      # https://docs.openshift.com/container-platform/3.11/admin_guide/scheduling/pod_affinity.html
      # https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
      # https://medium.com/kokster/scheduling-in-kubernetes-part-2-pod-affinity-c2b217312ae1
      # https://github.com/kubernetes/kubernetes/issues/66992
      # https://kublr.com/blog/implementing-advanced-scheduling-techniques-with-kubernetes/
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - <CDSID>-deployment-config
            topologyKey: "kubernetes.io/hostname"
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - <CDSID>-deployment-config
              topologyKey: failure-domain.ford.com/zone
      #tolerations:
      ## Allow this pod to be rescheduled while the node is in "critical add-ons only" mode.
      ## This, along with the annotation above marks this pod as a critical add-on.
      #- key: CriticalAddonsOnly
      #  operator: Exists
      #- key: nvidia.com/gpu
      #  operator: Exists
      #  effect: NoSchedule
      # https://docs.openshift.com/container-platform/3.11/dev_guide/service_accounts.html
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: devenablement-workshop-pull-secret
      containers:
      - name: <CDSID>-deployment-config
        imagePullPolicy: Always        
        ports:
          - name: http
            containerPort: 8080
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "100Mi"
            cpu: "100m"
        # https://docs.openshift.com/container-platform/3.11/dev_guide/application_health.html
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 20
          #successThreshold: 1
          #failureThreshold: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 20
         # successThreshold: 1
          #failureThreshold: 10
          timeoutSeconds: 5
  triggers:    
  - type: "ImageChange"
    imageChangeParams:
      automatic: true # this is required to link the build and deployment
      containerNames:
      - <CDSID>-deployment-config
      from:
        kind: ImageStreamTag
        name: '<CDSID>-image:latest'
