application/manifests/helloworld-deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmohanav-deployment
  labels:
    app: vmohanav-deployment
    source: caas-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vmohanav-deployment
  template:
    metadata:
      labels:
        app: vmohanav-deployment
    spec:
      # https://docs.openshift.com/container-platform/4.3/nodes/scheduling/nodes-scheduler-pod-affinity.html
      # https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
      # https://medium.com/kokster/scheduling-in-kubernetes-part-2-pod-affinity-c2b217312ae1
      # https://github.com/kubernetes/kubernetes/issues/66992
      # https://kublr.com/blog/implementing-advanced-scheduling-techniques-with-kubernetes/
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - vmohanav-deployment
            topologyKey: "kubernetes.io/hostname"
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - vmohanav-deployment
              topologyKey: failure-domain.ford.com/zone
      #tolerations:
      ## Allow this pod to be rescheduled while the node is in "critical add-ons only" mode.
      ## This, along with the annotation above marks this pod as a critical add-on.
      #- key: CriticalAddonsOnly
      #  operator: Exists
      #- key: nvidia.com/gpu
      #  operator: Exists
      #  effect: NoSchedule
      # https://docs.openshift.com/container-platform/4.3/authentication/understanding-and-creating-service-accounts.html
      # https://docs.openshift.com/container-platform/4.3/authentication/using-service-accounts-in-applications.html
      # https://docs.openshift.com/container-platform/4.3/authentication/using-service-accounts-as-oauth-client.html
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: testaccount-quay
      containers:
      - name: vmohanav-deployment
        image: registry.ford.com/vmohanav/devenablement
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "100Mi"
            cpu: "100m"
        # https://docs.openshift.com/container-platform/4.3/applications/application-health.html
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 20
          #successThreshold: 1
          #failureThreshold: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 20
         # successThreshold: 1
          #failureThreshold: 10
          timeoutSeconds: 5
