application/manifests/helloworld-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmohanav-blue-service
  labels:
    app: vmohanav-blue-deployment
    source: caas-workshop
spec:
  type: ClusterIP
  selector:
    app: vmohanav-blue-deployment
  ports:
  - protocol: "TCP"
    name: http
    port: 8080
    targetPort: 8080
